# laueotx_test

./: .gitignore  .gitlab-ci.yml  .nojekyll  README.md  _quarto.yml  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
docs/: _quarto.yml  _sidebar.yml  index.qmd  objects.json
docs/reference/: index.qmd  main.qmd  realdata.compute.qmd  realdata.multigrain.qmd  realdata.singlegrain.qmd
docs/tutorials/: index.qmd  plotting.py  realdata.ipynb  realdata.qmd
hkl_data/: Fe3Ga_A2HKL.txt  Fe3Ga_D03HKL.txt  Fe3Ga_L12HKL.txt  FeNiMnHKL_b.txt  hkl_CoNiGa.txt  hkl_Cu.txt  hkl_FeNiMn.txt  hkl_ruby.txt
laueotx/: __init__.py  __main__.py  assignments.py  beamline.py  config.py  crystalography.py  detector.py  deterministic_annealing.py  filenames.py  grain.py  laue_coordinate_descent.py  laue_math.py  laue_math_graph.py  laue_math_tensorised.py  laue_ops.py  laue_rotation.py  optimal_transport.py  peaks_data.py  polycrystalline_sample.py  rodrigues_space.py  spot_neighbor_lookup.py  spot_prototype_selection.py
laueotx/apps/: fakeapp.py  realdata.py
laueotx/utils/: arrays.py  config.py  inversion.py  io.py  logging.py
public/: index.html  search.json
public/reference/: get_object.html  index.html  main.html  preview.html  realdata.compute.html
public/tutorials/: index.html  realdata.html
reference/: get_object.html  index.html  main.html  preview.html  realdata.compute.html  realdata.multigrain.html  realdata.singlegrain.html
tutorials/: index.html  realdata.html
