[tool.poetry]
name = "laueotx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
click = "^8.1.4"
h5py = "^3.9.0"
tensorflow = "^2.13.0"
tqdm = "^4.65.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
nvidia-cudnn-cu11 = "8.6.0.163"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
laueotx = "laueotx:main"