[tool.poetry]
name = "laueotx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
click = "^8.1.4"
h5py = "^3.9.0"
# tensorflow = "^2.13.0"
tqdm = "^4.65.0"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
# nvidia-cudnn-cu11 = "8.6.0.163"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
psutil = "^5.9.5"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
ipywidgets = "^8.0.7"
jupyter = "^1.0.0"
plotly = "^5.15.0"
quartodoc = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
laueotx = "laueotx:main"